# sandbox

./: .gitignore  Cargo.toml  test-in-branch.txt
c-to-rust/: Cargo.toml  Makefile  README.md  build.rs  print.rs  test_c2rust
c-to-rust/src/: lib.rs  main.rs  test-main.c
hello/: Cargo.toml
hello/src/: array.rs  conditional.rs  main.rs  poly1305h.rs  print.rs  string.rs  test.rs  test1.rs  test_demo.rs  tuples.rs  types.rs  vars.rs  vectors.rs
rust-to-c/: Cargo.toml  Makefile  build.rs
rust-to-c/src/: main.rs  test-r2c.c
